--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
           <div class="col-2">28°C</div>
           <div class="col-2">28°C</div>
         </div>
-        </div>
-    </div>
+        </div>   
+    </div> 
     </div>
 </div>
 </div>
+<div class= "author"><small><a href="https://github.com/Esther02/project-weather-app" target=_blank>Open source code</a>, by Esther Carminatti</small></div>
+
 <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
