--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </form>
           
         </div>
+        <div class= "bottom-info">
         <div class="row weekdays">
           <div class="col-2">Sun</div>
           <div class="col-2">Mon</div>
@@ -85,6 +86,7 @@
           <div class="col-2">27°C</div>
           <div class="col-2">28°C</div>
           <div class="col-2">28°C</div>
+        </div>
         </div>
         </div>   
     </div> 
