--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
                 </span>
         <ul >
             <li id="date-time">Sat 19:26</li>
-            <li id="current-city" class="city">Madrid</li><img class="weather" src="images/cloudy.PNG" />
+            <li id="current-city" class="city">Madrid</li>
+            <li id="description-weather" class="description">partially cloudy</li><img class="weather" src="images/cloudy.PNG" />
         </ul>
         </h1>
           
           <span  class="col-6 greeting"><span id="message">
-            Hi there! How are you?</span> <br /><img id= "penguin-image"
+            Welcome to our weather app!</span> <br /><img id= "penguin-image"
               class="col-4 penguin"
               src="images/penguin2.gif"
             />
           </span>
         </br>
           <div class="row">
-              <div class="col-6 precipitation">humidity:<span id="current-humidity">23</span>%</div>
-              <div class="col-6 wind">wind: <span id="current-wind">2</span>km/h</div>
+              <div class="col-6 precipitation">Humidity:<span id="current-humidity">23</span>%</div>
+              <div class="col-6 wind">Wind: <span id="current-wind">2</span>km/h</div>
             </div>
           
         </div>
