Adding a default weather

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul >
             <li id="date-time">Sat 19:26</li>
             <li id="current-city" class="city"><strong>Madrid</strong></li>
-            <li id="description-weather" class="description">partially cloudy</li><img class="weather" id="top-icon" alt="" src="" />
+            <li id="description-weather" class="description">Cloudy</li><img class="weather" id="top-icon" alt="" src="http://openweathermap.org/img/wn/03d@2x.png" />
         </ul>
         </h1>
           
