Included different images for weather & adapted in CSS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul >
             <li id="date-time">Sat 19:26</li>
             <li id="current-city" class="city"><strong>Madrid</strong></li>
-            <li id="description-weather" class="description">Cloudy</li><img class="weather" id="top-icon" alt="" src="http://openweathermap.org/img/wn/03d@2x.png" />
+            <li id="description-weather" class="description">Cloudy</li><img class="weather" id="top-icon" alt="" src="images/04d.svg" />
         </ul>
         </h1>
           
@@ -79,12 +79,12 @@
           <div class="col-2">Fri</div>
         </div>
         <div class="row imagesweather">
-          <img class="col-2" src="images/cloudy.PNG" />
-          <img class="col-2" src="images/cloudy.PNG" />
-          <img class="col-2" src="images/cloudy.PNG" />
-          <img class="col-2" src="images/rainy.PNG" />
-          <img class="col-2" src="images/cloudy.PNG" />
-          <img class="col-2" src="images/cloudy.PNG" />
+          <img class="col-2" src="images/04d.svg" />
+          <img class="col-2" src="images/04d.svg" />
+          <img class="col-2" src="images/04d.svg" />
+          <img class="col-2" src="images/04d.svg" />
+          <img class="col-2" src="images/04d.svg" />
+          <img class="col-2" src="images/04d.svg" />
         </div>
         <div class="row temperatures">
           <div class="col-2">30°C</div>
