Transfer  "bottom-info" HTML to JS & clean that code

--- a/index.html
+++ b/index.html
@@ -69,31 +69,8 @@
           </form>
           
         </div>
-        <div class= "bottom-info">
-        <div class="row weekdays">
-          <div class="col-2">Sun</div>
-          <div class="col-2">Mon</div>
-          <div class="col-2">Tue</div>
-          <div class="col-2">Wed</div>
-          <div class="col-2">Thu</div>
-          <div class="col-2">Fri</div>
-        </div>
-        <div class="row imagesweather">
-          <img class="col-2" src="images/04d.svg"  />
-          <img class="col-2" src="images/04d.svg" />
-          <img class="col-2" src="images/04d.svg" />
-          <img class="col-2" src="images/04d.svg" />
-          <img class="col-2" src="images/04d.svg" />
-          <img class="col-2" src="images/04d.svg" />
-        </div>
-        <div class="row temperatures">
-          <div class="col-2">30°C</div>
-          <div class="col-2">31°C</div>
-          <div class="col-2">18°C</div>
-          <div class="col-2">27°C</div>
-          <div class="col-2">28°C</div>
-          <div class="col-2">28°C</div>
-        </div>
+        <div class= "bottom-info" id="forecast">
+        
         </div>
         </div>   
     </div> 
