Removed fake data

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
        
         <div class="row top">
           <h1  class="col-5">
-            <span class="temperatureWhole" id="temperatureNow">17</span>
+            <span class="temperatureWhole" id="temperatureNow"></span>
                 <span class="units">
                   <a id="celsius-link" class= "active" href="#">°C</a>|
                   <a class="unitF" id="fahrenheit-link" href="#">°F</a>
                 </span>
         <ul >
-            <li id="date-time">Sat 19:26</li>
-            <li id="current-city" class="city"><strong>Madrid</strong></li>
-            <li id="description-weather" class="description">Cloudy</li><img class="weather" id="top-icon" alt="" src="images/04d.svg" />
+            <li id="date-time"></li>
+            <li id="current-city" class="city"><strong></strong></li>
+            <li id="description-weather" class="description"></li><img class="weather" id="top-icon" alt="" src="" />
         </ul>
         </h1>
           
